--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
 @keyframes loading {
     0% {
       width: 0;
@@ -15,27 +15,33 @@ background: #FAFBFB;
 animation: loading 1s infinite;
 }
 
+.main-heading , .subheading {
+  font-family: Archivo;
+  /* font-size: calc(100vw-64px); */
+  font-weight: 700;
+  font-style: italic;
+}
+
+
+
 
 @layer utilities{
-  /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
       display: none;
   }
- /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
+      -ms-overflow-style: none;  
+      scrollbar-width: none;  
 }
 }
 
 
 html {
-  scrollbar-width: none; /* Hides the scrollbar */
+  scrollbar-width: none;
 }
 
-/* For Edge */
 ::-ms-scrollbar {
-  display: none; /* Hides the scrollbar */
+  display: none; 
 }
 
   
